[project]
name = "speedtrials-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.55.0",
    "fastapi>=0.115.14",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
]
